processed/gerrit/txt_full/36754.txt
Change:     36754
Subject:    LU-12967 tgt: clean up sync_on_cancel references
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/36754
Change-Id:  If7c6015420a5c3266a13798fd8b96539323ebbe5
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Andreas Dilger
Created:    2019-11-14 02:59:19.000000000
Updated:    2019-12-16 05:59:43.000000000
Patch Set:  3
Insertions: +25
Deletions:  -24
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Arshad Hussain: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, James Simmons, Arshad Hussain

--- Commit Message ---
LU-12967 tgt: clean up sync_on_cancel references

Clean up the use of "sync_on_cancel" in the code, since the tunable
parameter is named "sync_lock_cancel" and using the same name in
the code makes it easier to find the related parts.

Rename constants to be more consistent:
  NEVER_SYNC_ON_CANCEL    -> SYNC_LOCK_CANCEL_NEVER
  BLOCKING_SYNC_ON_CANCEL -> SYNC_LOCK_CANCEL_BLOCKING
  ALWAYS_SYNC_ON_CANCEL   -> SYNC_LOCK_CANCEL_ALWAYS

Initialize sync_lock_cancel_states[] with designated initializers
so that the state names always match the declared values.

Use ARRAY_SIZE() instead of needing NUM_SYNC_ON_CANCEL_STATES.

Test-Parameters: trivial
Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Change-Id: If7c6015420a5c3266a13798fd8b96539323ebbe5
Reviewed-on: https://review.whamcloud.com/36754
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.super@gmail.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Andreas Dilger, 2019-11-14 02:59:19.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-11-14 03:02:18.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-11-14 03:03:05.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  In file included from include/uapi/linux/stddef.h:1:0,
                  from include/linux/stddef.h:4,
                  from ./include/uapi/linux/posix_types.h:4,
                  from include/uapi/linux/types.h:13,
                  from include/linux/types.h:5,
                  from include/linux/kobject.h:19,
                  from /home/green/git/lustre-release/lustre/include/obd.h:36,
                  from /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/target/tgt_main.c:36:
 /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/target/tgt_main.c: In function ‘sync_lock_cancel_store’:
 /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/target/tgt_main.c:104:19: error: ‘sizeof’ applied to a bit-field
         1 << sizeof(tgt->lut_sync_lock_cancel));
                    ^
 include/linux/compiler.h:434:19: note: in definition of macro ‘__compiletime_assert’
    bool __cond = !(condition);    \
                    ^
 include/linux/compiler.h:454:2: note: in expansion of macro ‘_compiletime_assert’
   _compiletime_assert(condition, msg, __compiletime_assert_, __LINE__)
   ^
 include/linux/bug.h:53:37: note: in expansion of macro ‘compiletime_assert’
  #define BUILD_BUG_ON_MSG(cond, msg) compiletime_assert(!(cond), msg)
                                      ^
 include/linux/bug.h:77:2: note: in expansion of macro ‘BUILD_BUG_ON_MSG’
   BUILD_BUG_ON_MSG(condition, "BUILD_BUG_ON failed: " #condition)
   ^
 /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/target/tgt_main.c:103:2: note: in expansion of macro ‘BUILD_BUG_ON’
   BUILD_BUG_ON(ARRAY_SIZE(sync_lock_cancel_states) >
   ^
 /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/target/tgt_main.c: At top level:
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Lustre Gerrit Janitor, 2019-11-14 03:03:49.000000000) ---
Patch Set 1:

centos7: Compile failed

rhel8.0: Compile failed


 Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/4472/results.html

--- Message (jenkins, 2019-11-14 03:38:52.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/9929/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/69716/ : FAILURE

--- Message (Andreas Dilger, 2019-11-14 03:42:26.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2019-11-14 03:42:40.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2019-11-14 03:46:00.000000000) ---
Patch Set 2:

Builds for x86_64 centos7,rhel8.0 successful
Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/4475/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (Lustre Gerrit Janitor, 2019-11-14 03:54:33.000000000) ---
Patch Set 2:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(centos7)All results and logs: http://testing.linuxhacker.ru:3333/lustre-reports/4475/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2019-11-14 04:20:09.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/9931/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/69718/ : SUCCESS

--- Message (Autotest, 2019-11-14 04:21:17.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-ldiskfs-dne session for build 69718.

--- Message (Lustre Gerrit Janitor, 2019-11-14 06:12:49.000000000) ---
Patch Set 2:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed with errors!

> sanity-lfsck@zfs Failure(1299s)
- 23b((9) Fail to repair dangling name entry: 0) 23c((8) unexpected size) 

Tests with NEW Warning messages:
- sanity2@ldiskfs+DNE(Client: Memory Leaks Detected) 

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: http://testing.linuxhacker.ru:3333/lustre-reports/4475/results.html

--- Message (Maloo, 2019-11-14 08:01:45.000000000) ---
Patch Set 2: Verified+1

Passed enforced test review-ldiskfs-dne on CentOS 7.0/x86_64 uploaded by Trevis Autotest from trevis-9vm6: https://testing.whamcloud.com/test_sessions/93665ac0-7728-437f-b14f-313ad83b22d8 ran 4 tests.

--- Message (Arshad Hussain, 2019-11-15 12:53:31.000000000) ---
Patch Set 2: Code-Review+1

--- Message (James Simmons, 2019-11-16 19:22:49.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2019-12-16 05:59:38.000000000) ---
Patch Set 2: Code-Review+2

--- Message (unknown, 2019-12-16 05:59:43.000000000) ---
Change has been successfully cherry-picked as 52a5981be4df863088168b3ea41fac9e29ddf060 by Oleg Drokin
